Fixed header alignment

--- a/main.css
+++ b/main.css
@@ -25,6 +25,7 @@ header span {
     flex: 1 100%;
     display: flex;
     flex-direction: row;
+    align-items: center;
 }
 
 header hr {
